--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
                 var map;
                 function loadMapScenario() {
                     map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
-                        credentials: 'Your Bing Maps Key'
+                        credentials: 'AjFkNBGu6xQ1QePUDJU7hVOegwUgCoLzqVMLgC8DhOHQHIVBp72ojtC3PAjUyR_U'
                     });
                 }
                 
             
         </script>
-        <script type='text/javascript' src='myMap.js' async defer></script>
+        <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
     </body>
 </html>
